2001-04-11  Akim Demaille  <akim@epita.fr>

	* depend2.am: Fix the `if' condition for Libtool.
	Reported by Robert Boehne.

2001-04-10  Robert Collins  <robert.collins@itdomain.com.au>

	* tests/subobj5.test: New file.

2001-04-10  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* m4/make.m4 (AM_MAKE_INCLUDE): Pass `-s' to make.
	* tests/Makefile.am (TESTS): Added make.test.
	* tests/make.test: New file.

2001-04-10  Tom Tromey  <tromey@redhat.com>

	* tests/defs: Changed how ACLOCAL and AUTOMAKE are set.

2001-04-10  Derek R. Price  <dprice@collab.net>

	* tests/defs: Allow user to override AUTOMAKE and ACLOCAL.

2001-04-10  Akim Demaille  <akim@epita.fr>

	* distdir.am: Add a missing backslash.

2001-04-10  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_aclocal_m4): Handle $relative_dir and special
	variables.
	Specify to the caller whether $regen_aclocal_m4.
	(&handle_configure): Adjust.
	Transform `REGEN-ACLOCAL-M4'.
	Reported by Tom.
	* configure.am: Use it.
	* tests/defs (me): New.
	* tests/confdeps.test: New.

2001-04-09  Tom Tromey  <tromey@redhat.com>

	* m4/missing.m4 (AM_MISSING_HAS_RUN): Use `true', not `:'.
	Fixes report from Jim Meyering.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_configure): Don't bother with optimizing
	macro uses.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* tests/cond3.test (expected): Adjust.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_single_transform_list): Remove $xbase,
	unused.
	(&handle_source_transform): All the variables have conditions now,
	simplify.
	(&variable_delete): Admit an argument @conds.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in ($source_suffix_pattern): Remove, unused.
	%extension_map seems to have replaced it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* ext-compile.am: New file.
	* automake.in (&finish_languages): Output it.
	Require a C linker if there are several registered source suffixes.