@@ -3108,7 +3108,8 @@ sub handle_dependencies
 	    $output_rules .= "\n";
 	    foreach my $iter (@deplist)
  	    {
-		$output_rules .= '@AMDEP_TRUE@@_am_include@ ' . $iter . "\n";
+		$output_rules .= ('@AMDEP_TRUE@@_am_include@ @_am_quote@'
+				  . $iter . '@_am_quote@' . "\n");
 	    }
 
 	    $output_rules .= &file_contents ('depend');
