@@ -1,3 +1,10 @@
+2001-04-11  Tom Tromey  <tromey@redhat.com>
+
+	Fixes report from Larry Jones:
+	* automake.in (handle_dependencies): Add `@_am_quote@' where
+	appropriate.
+	* m4/make.m4 (AM_MAKE_INCLUDE): Handle BSD-style make.
+
 2001-04-11  Akim Demaille  <akim@epita.fr>
 
 	* depend2.am: Fix the `if' condition for Libtool.
